--- a/paginas/porquebajosodio.html
+++ b/paginas/porquebajosodio.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
-     <link rel="stylesheet" href="../css/style.css">
+     <link rel="stylesheet" href="../css/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   </head>
   <body>
@@ -53,13 +53,13 @@
      <!-- INICIO DE LOS INDICADORES DEL CARUSEL -->
      <div class="carousel-inner">
        <div class="carousel-item active">
-         <img src="../imagenes/60.jpg" class="d-block w-100" alt="Categoria1" height="400">
+         <img src="../imagenes/00.png" class="d-block w-100" alt="Categoria1" height="400">
        </div>
        <div class="carousel-item">
-         <img src="../imagenes/61.jpg" class="d-block w-100" alt="Categoria2" height="400">
+         <img src="../imagenes/01.png" class="d-block w-100" alt="Categoria2" height="400">
        </div>
        <div class="carousel-item">
-         <img src="../imagenes/62.jpg" class="d-block w-100" alt="Categoria3"height="400">
+         <img src="../imagenes/02.png" class="d-block w-100" alt="Categoria3"height="400">
        </div>
      </div>
      <!-- FIN DEL SLIDER DEL CAROUSEL -->
