--- a/paginas/contactanos.html
+++ b/paginas/contactanos.html
@@ -3,10 +3,15 @@
   <head>
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <link rel="stylesheet" href="../Css/main.css"/>
+    <link rel="stylesheet" href="../css/main.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="../imagenes/quality.png">
+    <meta name="siteid" content="ar">
+    <meta name="countryid" content="AR">
+    <meta name="robots" content="index, follow">
+    <meta name="country" content="Argentina">
+    <meta name="Language" content="es">
     <title>Formulario</title>
   </head>
   <body class="Formulario">
