--- a/paginas/porquebajosodio.html
+++ b/paginas/porquebajosodio.html
@@ -1,16 +1,20 @@
 <!doctype html>
 <html lang="es">
   <head>
-    <meta charset="utf-8">
-    <meta name="Bidones de agua Ionizados y Ozonizados" content="Encargados de llevar agua hasta tu domicilio bidones de agua.Dispenser.Agua envase reciclable."/>
-    <meta name="keywords" content="BIDONES, BIDON, 20L, 10L, DISPENSER, Baja en sodio">
-    <meta name="siteid" content="ar">
-    <meta name="countryid" content="AR">
-    <meta name="robots" content="index, follow">
-    <meta name="country" content="Argentina">
-    <meta name="Language" content="es"
-    <title>Porquebajosodio</title>
-     <link rel="stylesheet" href="../css/main.css">
+    <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+  <meta name="Bidones de agua Ionizados y Ozonizados" content="Encargados de llevar agua hasta tu domicilio bidones de agua.Dispenser.Agua envase reciclable."/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="keywords" content="BIDONES, BIDON, 20L, 10L, DISPENSER, Baja en sodio">
+  <title>Porquebajosodio</title>
+  <link rel="stylesheet" href="./css/main.css">
+  <link rel="shortcut icon" href="./imagenes/quality.png"/>
+  <meta name="siteid" content="ar">
+  <meta name="countryid" content="AR">
+  <meta name="robots" content="index, follow">
+  <meta name="country" content="Argentina">
+  <meta name="Language" content="es">
+  <link rel="stylesheet" href="../css/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   </head>
   <body>
